src/components/pages/home/About.module.css
.aboutSection {
	width: 85%;
	max-width: 75rem;
	display: flex;
	align-items: center;
	gap: 6rem;
	margin-block: 5rem;
}

.title {
	flex: 45%;
	font-family: var(--ff-satoshi);
	font-weight: var(--fw-medium);
	color: var(--heading-primary);
	font-size: clamp(1.5rem, 5vw, 3.5rem);
	line-height: 1.5;
}

.text {
	flex: 55%;
	font-size: clamp(1rem, 2.5vw, 1.5rem);
	line-height: 1.5;
	color: var(--text-primary);
}

.bookingBtn {
	width: clamp(80px, 10%, 120px);
	aspect-ratio: 1 / 1;
	background-color: var(--btn-accent);
	text-align: center;
	align-content: center;
	border-radius: 50%;
	color: var(--text-secondary);
	font-size: clamp(1rem, 3vw, 1.25rem);
	font-weight: var(--fw-bold);
	position: fixed;
	top: 5%;
	right: 6%;
	z-index: 2000;
	transition: all 0.3s ease-in;
	opacity: 0;
	display: none;
}

.bookingBtn:hover {
	background-color: var(--btn-accent-hover);
	cursor: pointer;
	transform: rotate(30deg);
}

/* Media Queries */

@media screen and (max-width: 1024px) {
	.aboutSection {
		flex-direction: column;
		gap: 1rem;
	}
	.title,
	.text {
		text-align: center;
	}
}

